<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/workListFragment">

    <fragment
        android:id="@+id/workListFragment"
        android:name="com.intelliavant.mytimetracker.WorkListPagerFragment"
        android:label="@string/work_list_fragment_label"
        tools:layout="@layout/fragment_work_list">
        <action
            android:id="@+id/action_workListFragment_to_stopwatchFragment"
            app:destination="@id/stopwatchFragment" />
        <action
            android:id="@+id/action_workListFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        />
    </fragment>
    <fragment
        android:id="@+id/stopwatchFragment"
        android:name="com.intelliavant.mytimetracker.StopwatchFragment"
        android:label="@string/stopwatch_fragment_label"
        tools:layout="@layout/fragment_stopwatch">
        <argument
            android:name="workId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.intelliavant.mytimetracker.SettingsFragment"
        android:label="@string/settings_fragment_label"
        >
        <action
            android:id="@+id/action_settingsFragment_to_settingsWorkTypeListFragment"
            app:destination="@id/settingsWorkTypeListFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left" />

    </fragment>

    <fragment
        android:id="@+id/settingsWorkTypeListFragment"
        android:name="com.intelliavant.mytimetracker.SettingsWorkTypeListFragment"
        android:label="@string/settings_activity_types_fragment_label"
        tools:layout="@layout/fragment_settings_work_type_list_fragment"
        >

        <action
            android:id="@+id/action_settingsWorkTypeListFragment_to_settingsWorkTypeFormFragment"
            app:destination="@id/settingsWorkTypeFormFragment"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:exitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/settingsWorkTypeFormFragment"
        android:name="com.intelliavant.mytimetracker.SettingsWorkTypeFormFragment"
        android:label="@string/new_work_type"
        tools:layout="@layout/fragment_settings_work_type_form"
        >
        <argument
            android:name="workTypeId"
            app:argType="long"/>
    </fragment>


</navigation>